[gd_scene load_steps=2 format=3 uid="uid://d4djecahvews7"]

[ext_resource type="Script" path="res://scenes/obstacles/obstacle_spawner.gd" id="1_eo6ue"]

[node name="ObstacleSpawner" type="Node2D"]
script = ExtResource("1_eo6ue")

[node name="ObstaclesHolder" type="Node2D" parent="."]

[node name="SpawnTimer" type="Timer" parent="."]
wait_time = 3.0

[connection signal="timeout" from="SpawnTimer" to="." method="_on_spawn_timer_timeout"]
